feat: init renv

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,17 +1,18 @@
 Package: block.demo
-Title: What the Package Does (One Line, Title Case)
+Title: 'blockr' Demo
 Version: 0.0.0.9000
 Authors@R: 
-    person("First", "Last", , "first.last@example.com", role = c("aut", "cre"),
-           comment = c(ORCID = "YOUR-ORCID-ID"))
-Description: What the package does (one paragraph).
-License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
-    license
+    c(person(given = "John",
+             family = "Coene",
+             role = c("aut", "cre"),
+             email = "john@opifex.org")
+    )
+Description: 'blockr' demo.
+License: GPL (>= 3)
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
 Imports: 
-  bslib,
   htmltools,
   shiny,
   masonry,
@@ -19,9 +20,11 @@ Imports:
   bmsui,
   bsutils
 Suggests: 
-  pkgload
+  pkgload,
+  blockr.data
 Remotes:
+  blockr-org/blockr,
+  blockr-org/blockr.data,
   blockr-org/masonry,
-  blockr-org/block.shiny,
   blockr-org/bmsui,
   JohnCoene/bsutils
